--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		var getRadius=function(){
 			rad=radiusTxt.value;
 			//alert("Radius= (in miles)"+rad);
+      alert("Remember, this web app finds recycle bins in NYC based off your current location and a radius.");
 			alert("Rememer to allow the website to access your location!");
 			if (navigator.geolocation) {
 			navigator.geolocation.getCurrentPosition(success);
